--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
@@ -7,18 +7,18 @@
 
 {% block package_general_metadata %}
 
-{{ form.input('language', label=_('Language'), id='field-language', placeholder=_('en, de, fr'), value=data.common_core.language, error=errors.language, classes=['control-medium'], attrs={'title': 'The major language used in the dataset.'}, is_required=true )}}
+{{ form.input('language', label=_('Language'), id='field-language', placeholder=_('en, de, fr'), value=data.custom_meta.language, error=errors.language, classes=['control-medium'], attrs={'title': 'The major language used in the dataset.'}, is_required=true )}}
 
-{{ form.input('intended_use', id='field-intended_use', label=_('Intended Use'), placeholder=_('for research of ...'), value=data.common_core.intended_use, error=errors.intuse, classes=['control-medium'], attrs={'title': "How do you plan on using the data"}, is_required=true) }}
+{{ form.input('intended_use', id='field-intended_use', label=_('Intended Use'), placeholder=_('for research of ...'), value=data.custom_meta.intended_use, error=errors.intuse, classes=['control-medium'], attrs={'title': "How do you plan on using the data"}, is_required=true) }}
 
-{{ form.markdown('access_information', id='field-access_information', label=_('Access Information'), placeholder=_('Are there constraints on who can access the data? Is it in the public or private domain? Are there associated costs?'), value=data.common_core.access_information, error=errors.ai, classes=['control-full'], attrs={'title': 'A statement or URL that points to the rights management or usage statement for the resource.'}, is_required=true) }}
+{{ form.markdown('access_information', id='field-access_information', label=_('Access Information'), placeholder=_('Are there constraints on who can access the data? Is it in the public or private domain? Are there associated costs?'), value=data.custom_meta.access_information, error=errors.ai, classes=['control-full'], attrs={'title': 'A statement or URL that points to the rights management or usage statement for the resource.'}, is_required=true) }}
 
 <div class="control-group">
 	<label class="control-label" for="field-type"> <span title="This field is required" class="control-required">*</span> {{ _("Type") }}</label>
 	<div class="controls">
 		<select id="field-type" name="type" data-module="autocomplete" title="The type of the resource (e.g., Time Series,  River Cross Section, Raster)">
 			{% for type in h.get_types() %}
-			<option value="{{ type }}" {% if type == data.common_core.type %}selected{% endif %} > {{ type }} </option>
+			<option value="{{ type }}" {% if type == data.custom_meta.type %}selected{% endif %} > {{ type }} </option>
 			{% endfor %}
 		</select>
 	</div>
@@ -38,7 +38,7 @@
 	<div id="generalDiv" class="panel-collapse collapse out">
 
 		<p>
-			{{ form.input('purpose', label=_('Purpose'), id='field-purpose', placeholder=_('Regulation, Research, Education'), value=data.common_core.purpose, error=errors.purpose, classes=['control-medium'], attrs={'title': 'Purpose for which the dataset was created.'})}}
+			{{ form.input('purpose', label=_('Purpose'), id='field-purpose', placeholder=_('Regulation, Research, Education'), value=data.custom_meta.purpose, error=errors.purpose, classes=['control-medium'], attrs={'title': 'Purpose for which the dataset was created.'})}}
 		</p>
 		<p>
 			{{ form.input('collection', label=_('Relation'), id='field-collection', placeholder=_('http://data.iutahepscor.org/resource/2341'), value=data.collection, error=errors.collection, classes=['control-medium'], attrs={'title': 'Other iUTAH datasets that should be included as references for this dataset.'} )}}
@@ -52,7 +52,7 @@
 				<div class="controls">
 					<select id="field-research_focus" name="research_focus" data-module="autocomplete" title="Which research focus area will the data be useful for?">
 						{% for type in h.get_research_focus() %}
-						<option value="{{ type }}" {% if type == data.common_core.research_focus %}selected{% endif %} > {{ type }} </option>
+						<option value="{{ type }}" {% if type == data.custom_meta.research_focus %}selected{% endif %} > {{ type }} </option>
 						{% endfor %}
 					</select>
 				</div>
