--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_metadata_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_metadata_fields.html
@@ -24,7 +24,7 @@
 
 
 {% block package_metadata_fields_custom %}
-{# call helper function that moves any common core fields from 'extras' to the 'common_core' key #}
+{# call helper function that moves any common core fields from 'extras' to the 'custom_meta' key #}
 {# TODO uncomment below, need to filter out the custom form fields, but right now, if we don't include them in the form, then they get
 deleted from the database!!
 #}
