--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
@@ -14,11 +14,11 @@
 {{ form.markdown('access_information', id='field-access_information', label=_('Access Information'), placeholder=_('Are there constraints on who can access the data? Is it in the public or private domain? Are there associated costs?'), value=data.custom_meta.access_information, error=errors.ai, classes=['control-full'], attrs={'title': 'A statement or URL that points to the rights management or usage statement for the resource.'}, is_required=true) }}
 
 <div class="control-group">
-	<label class="control-label" for="field-type"> <span title="This field is required" class="control-required">*</span> {{ _("Type") }}</label>
+	<label class="control-label" for="field-data-type"> <span title="This field is required" class="control-required">*</span> {{ _("Type") }}</label>
 	<div class="controls">
-		<select id="field-type" name="type" data-module="autocomplete" title="The type of the resource (e.g., Time Series,  River Cross Section, Raster)">
-			{% for type in h.get_types() %}
-			<option value="{{ type }}" {% if type == data.custom_meta.type %}selected{% endif %} > {{ type }} </option>
+		<select id="field-data-type" name="data-type" data-module="autocomplete" title="The type of the resource (e.g., Time Series,  River Cross Section, Raster)">
+			{% for type in h.get_data_types() %}
+			<option value="{{ type }}" {% if type == data.custom_meta.data_type %}selected{% endif %} > {{ type }} </option>
 			{% endfor %}
 		</select>
 	</div>
