Fix for metadata plugin dataset overwriting problem (issue#11, 4)

--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_basic_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/package_basic_fields.html
@@ -2,12 +2,14 @@
 
 
 {% block package_basic_fields_description %}
-{{ form.markdown('notes', id='field-notes', label=_('Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes, attrs={'title' : 'Human-readable description (e.g., an abstract) with sufficient detail to enable a user to quickly understand whether the asset is of interest.'}, is_required=true) }}
+{# {{ form.markdown('notes', id='field-notes', label=_('Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes, attrs={'title' : 'Human-readable description (e.g., an abstract) with sufficient detail to enable a user to quickly understand whether the asset is of interest.'}, is_required=true) }}#}
+{{ form.markdown('notes', id='field-notes', label=_('* Description'), placeholder=_('eg. Some useful notes about the data'), value=data.notes, error=errors.notes, attrs={'title' : 'Human-readable description (e.g., an abstract) with sufficient detail to enable a user to quickly understand whether the asset is of interest.'}) }}
 {% endblock package_basic_fields_description%}
 
 {% block package_basic_fields_tags %}
 {% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?', 'title':'Tags (or keywords) help users discover your dataset, please include terms that would be used by technical and non-technical users.'} %}
-{{ form.input('tag_string', id='field-tags', label=_('Keywords'), placeholder=_('eg. water, temperature, Little Bear River'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs, is_required=true) }}
+{# {{ form.input('tag_string', id='field-tags', label=_('Keywords'), placeholder=_('eg. water, temperature, Little Bear River'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs, is_required=true) }}#}
+{{ form.input('tag_string', id='field-tags', label=_('* Keywords'), placeholder=_('eg. water, temperature, Little Bear River'), value=data.tag_string, error=errors.tags, classes=['control-full'], attrs=tag_attrs) }}
 {% endblock package_basic_fields_tags %}
 
 
