--- a/src/ckanext-mdftemplate/fanstatic/mdftemplate_mdfstyle.css
+++ b/src/ckanext-mdftemplate/fanstatic/mdftemplate_mdfstyle.css
@@ -484,3 +484,8 @@ ul.nice-menu ul li a:hover {
     /* symbol for "collapsed" panels */
     content: "\e080";    /* adjust as needed, taken from bootstrap.css */
 }
+
+div.panel-tabs li a {
+    padding-left: 8px;
+    padding-right: 8px;
+}
