--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/variable_fields.html
@@ -21,13 +21,13 @@
 	<div id="vmDiv" class="panel-collapse collapse out">
 
 		<p>
-			{{ form.input('units', label=_('Units'), id='field-units', placeholder=_('Celsius, feet, percentage'), value=data.units, error=errors.units, classes=['control-medium'], attrs={'title': 'What units are the data expressed in?'} )}}
+			{{ form.input('units', label=_('Units'), id='field-units', placeholder=_('Celsius, feet, percentage'), value=data.custom_meta.units, error=errors.units, classes=['control-medium'], attrs={'title': 'What units are the data expressed in?'} )}}
 		</p>
 		<p>
-			{{ form.markdown('data_collection_method', label=_('Data Collection Method'), id='field-data_collection_method', placeholder=_('YSI EXO sonde used to measuer temperature. Values logged using a Campbell Scientivic datalogger and streamd to iUTAH servers. Calibration conducted weekly'), value=data.data_collection_method, error=errors.data_collection_method,  attrs={'title': 'The methods used to generate, create, collect, or produce the data.'} )}}
+			{{ form.markdown('data_collection_method', label=_('Data Collection Method'), id='field-data_collection_method', placeholder=_('YSI EXO sonde used to measuer temperature. Values logged using a Campbell Scientivic datalogger and streamd to iUTAH servers. Calibration conducted weekly'), value=data.custom_meta.data_collection_method, error=errors.data_collection_method,  attrs={'title': 'The methods used to generate, create, collect, or produce the data.'} )}}
 		</p>
 		<p>
-			{{ form.markdown('data_processing_method', label=_('Data Processing Method'), id='field-data_processing_method', placeholder=_('Data quality control and post processing conducted with ODM tools Python by watershed technicians'), value=data.data_processing_method, error=errors.data_processing_method,  attrs={'title': 'The methods and programs used and specific steps undertaken to process the data.'} )}}
+			{{ form.markdown('data_processing_method', label=_('Data Processing Method'), id='field-data_processing_method', placeholder=_('Data quality control and post processing conducted with ODM tools Python by watershed technicians'), value=data.custom_meta.data_processing_method, error=errors.data_processing_method,  attrs={'title': 'The methods and programs used and specific steps undertaken to process the data.'} )}}
 		</p>
 	</div>
 </div>
