--- a/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
+++ b/src/ckanext-Metadata/ckanext/Metadata/templates/package/snippets/general_fields.html
@@ -16,6 +16,7 @@
 {# {{ form.markdown('access_information', id='field-access_information', label=_('Access Information'), placeholder=_('Are there constraints on who can access the data? Is it in the public or private domain? Are there associated costs?'), value=data.custom_meta.access_information, error=errors.ai, classes=['control-full'], attrs={'title': 'A statement or URL that points to the rights management or usage statement for the resource.'}, is_required=true) }}#}
 {{ form.markdown('access_information', id='field-access_information', label=_('* Access Information'), placeholder=_('Are there constraints on who can access the data? Is it in the public or private domain? Are there associated costs?'), value=data.custom_meta.access_information, error=errors.ai, classes=['control-full'], attrs={'title': 'A statement or URL that points to the rights management or usage statement for the resource.'}) }}
 
+
 <div class="control-group">
 	<label class="control-label" for="field-data_type"> <span title="This field is required" class="control-required">*</span> {{ _("Type") }}</label>
 	<div class="controls">
@@ -54,8 +55,9 @@
 				<label class="control-label" for="field-research_focus"> {{ _("Research Focus Area") }}</label>
 				<div class="controls">
 					<select id="field-research_focus" name="research_focus" data-module="autocomplete" title="Which research focus area will the data be useful for?">
-						{% for type in h.get_research_focus() %}
-						<option value="{{ type }}" {% if type == data.custom_meta.research_focus %}selected{% endif %} > {{ type }} </option>
+                        <option value="" > {{ _('Select a value') }}</option>
+                        {% for type in h.get_research_focus() %}
+						    <option value="{{ type }}" {% if type == data.custom_meta.research_focus %} selected="selected" {% endif %} > {{ type }} </option>
 						{% endfor %}
 					</select>
 				</div>
